bin/console/src/snapshots/chaos_console__bottom_pane__tests__status_and_composer_fill_height_without_bottom_padding.snap
---
source: bin/console/src/bottom_pane.rs
expression: "render_snapshot(&pane, area)"
---
• Working (0s • esc to interr…
                              
                              
› Ask Agent of Chaos to do so 
                              
           100% context left
