bin/console/src/snapshots/chaos_console__bottom_pane__tests__status_only_snapshot.snap
---
source: bin/console/src/bottom_pane.rs
expression: "render_snapshot(&pane, area)"
---
• Working (0s • esc to interrupt)               
                                                
                                                
› Ask Agent of Chaos to do something.           
                                                
  ? for shortcuts            100% context left
