bin/console/src/snapshots/chaos_console__bottom_pane__tests__status_with_details_and_queued_messages_snapshot.snap
---
source: bin/console/src/bottom_pane.rs
expression: "render_snapshot(&pane, area)"
---
• Working (0s • esc to interrupt)               
  └ First detail line                           
    Second detail line                          
                                                
• Queued follow-up messages                     
  ↳ Queued follow-up question                   
    ⌥ + ↑ edit last queued message              
                                                
› Ask Agent of Chaos to do something.           
                                                
  ? for shortcuts            100% context left
